[package]
name = "lobby"
version = "0.0.1"
authors = ["Damien Radtke <dradtke@channeliq.com>"]

description = "TCP server implementation suitable for chat rooms and games."
repository = "https://github.com/dradtke/lobby"
documentation = "http://www.rustdox.com/dradtke/lobby/lobby/"
license = "MIT"

keywords = ["tcp", "server", "lobby", "game", "networking"]

[dependencies]
vec_map = "0.6.0"
